--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,4 +13,18 @@
     <string name="title_home">Home</string>
     <string name="title_dashboard">Dashboard</string>
     <string name="title_notifications">Notifications</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+
+    <string-array name="service_types">
+        <item>haircut</item>
+        <item>eyelashes</item>
+        <item>eyebrows</item>
+        <item>nails</item>
+    </string-array>
+
+    <string-array name="user_types">
+        <item>master</item>
+        <item>model</item>
+    </string-array>
 </resources>
